name:           dgp
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       do go problems from goproblems.com
build-type:     Simple
build-depends:  FUtil, HSH, base, containers, directory, filepath, tagsoup,
                unamb, bytestring

executable:     dgp
main-is:        Main.hs
hs-source-dirs: src
